--- a/index5.html
+++ b/index5.html
@@ -24,24 +24,58 @@
     </ul>
     </nav> 
     <br>
-    <center>
-        <section id="Main">
-        <section id="seccion"> <br> 
-            <h2>Titulo de la empresa 5</h2>  
-        <Article id="art1">  <p> Un breve parrafo de descripcion de la empresa o producto </p> </Article>
-        <!-- <article id="art2"> <img src="Heather.jpg" alt=""></article> -->
-        <article id="art3"> Describir el producto en cuestion de la imagen esta</article>
-          
-           </section>
-        <aside> 
-        <h2> no se que poner</h2>   
-        <ul>
-            <section>  <h4>Tema 1</h4></section>
-            <section><h4>tema2</h4></section>
-        </ul> 
-        </aside>
-        </section>
-    </center>
+    <div class="linea">
+        <div class="contenedor_articulos">
+            <div class="articulos">
+                <img src="Img/img (1).jpg" alt="">
+                <div class="overlay">
+                    <h2>Comprar</h2>
+                </div>
+            </div>
+            <div class="articulos">
+                <img src="Img/img (2).jpg" alt=""><div class="overlay">
+                    <h2>Comprar</h2>
+                </div>
+            </div>
+            <div class="articulos">
+                <img src="Img/img (3).jpg" alt=""><div class="overlay">
+                    <h2>Comprar</h2>
+                </div>
+            </div>
+            <div class="articulos">
+                <img src="Img/img (4).jpg" alt=""><div class="overlay">
+                    <h2>Comprar</h2>
+                </div>
+            </div>
+            <div class="articulos">
+                <img src="Img/img (5).jpg" alt=""><div class="overlay">
+                    <h2>Comprar</h2>
+                </div>
+            </div>
+            <div class="articulos">
+                <img src="Img/img (6).jpg" alt=""><div class="overlay">
+                    <h2>Comprar</h2>
+                </div>
+            </div>
+            <div class="articulos">
+                <img src="Img/img (7).jpg" alt=""><div class="overlay">
+                    <h2>Comprar</h2>
+                </div>
+            </div>
+            <div class="articulos">
+                <img src="Img/img (8).jpg" alt=""><div class="overlay">
+                    <h2>Comprar</h2>
+                </div>
+            </div>
+            <div class="articulos">
+                <img src="Img/img (9).jpg" alt=""><div class="overlay">
+                    <h2>Comprar</h2>
+                </div>
+            </div>
+        </div>
+
+    </div>
+  </div>
     <footer> <H2>Todos los derechos reservados al grupo 4 Desarrollo Web © UMG 2020</H2>   </footer>
 
 </body>
