prueba de carga

--- a/index3.html
+++ b/index3.html
@@ -25,24 +25,47 @@
     </ul>
     </nav> 
     <br>
-    <center>
-        <section id="Main">
-        <section id="seccion"> <br> 
-            <h2>Titulo de la empresa3</h2>  
-        <Article id="art1">  <p> Un breve parrafo de descripcion de la empresa o producto </p> </Article>
-        <!-- <article id="art2"> <img src="Heather.jpg" alt=""></article> -->
-        <article id="art3"> Describir el producto en cuestion de la imagen esta</article>
-          
-           </section>
-        <aside> 
-        <h2> no se que poner</h2>   
-        <ul>
-            <section>  <h4>Tema 1</h4></section>
-            <section><h4>tema2</h4></section>
-        </ul> 
-        </aside>
-        </section>
-    </center>
+    <div class="linea">
+        <div class="contenedor_servicios">
+            <div class="servicios">
+                <img src="Img/servicios (1).jpg" alt="">
+                <div class="overlay">
+                    <h2>Diseño Web</h2>
+                    <br>
+                    <p>si necesitas anunciarte y tener una mejor presentacion, nosotros te ayudamos
+                        diseñando tu sitio web</p>
+                </div>
+            </div>
+            <div class="servicios">
+                <img src="Img/servicios (2).jpg" alt=""><div class="overlay">
+                    <h2>Asesoria Tecnica</h2>
+                    <br>
+                    <p>Brindamos asesoria tecnica a los usuarios y empresas que requieran de equipo especialidado
+                        y certificado a costos accesibles</p>
+                </div>
+            </div>
+            <div class="servicios">
+                <img src="Img/servicios (3).jpg" alt=""><div class="overlay">
+                    <h2>Entrega a domicilio</h2>
+                    <br>
+                    <p>No tienes que preocuparte por salir de casa, oficina o trabajo, te lo entregamos a tu puerta
+                        sin costo adicional</p>
+                </div>
+            </div>
+            <div class="servicios">
+                <img src="Img/servicios (4).jpg" alt=""><div class="overlay">
+                    <h2>Compra en línea</h2>
+                    <br>
+                    <p>comprar en linea nunca fue tan fácil, rapido seguro y confiable, todos nuestros productos estan
+                        garantizados.
+                    </p>
+                </div>
+            </div>
+
+
+        </div>
+
+    </div>
     <footer> <H2>Todos los derechos reservados al grupo 4 Desarrollo Web © UMG 2020</H2>   </footer>
 
 </body>
